--- a/src/main/resources/assets/idnwtkb/lang/zh_cn.json
+++ b/src/main/resources/assets/idnwtkb/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "block.idnwtkb.deepslate_ender_ore": "深层末影矿",
   "block.idnwtkb.ender_ore": "末影矿",
+  "block.idnwtkb.nether_blaze_ore": "下界烈焰矿",
   "item.idnwtkb.ender_dust": "末影粉"
 }
